fix Alignment of The Message image

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,11 @@
     color: white;
 }
 
-.a {
+a link {
+    color: black;
+}
+
+.nav-link {
 color: black;
 }
 
@@ -12,12 +16,18 @@ color: black;
     padding:5px;
 }
 
-
-
-.rotated {
-    transform: rotate(270deg);
+.navbar-custom {
+    background-color: white;
+    color: black;
 }
 
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
 /*.rotateimg90 {*/
 /*    -webkit-transform:rotate(90deg);*/
 /*    -moz-transform: rotate(90deg);*/
